dropshot/tests/fail/bad_endpoint6.stderr
error: expected identifier, found `"Oxide"`
  --> tests/fail/bad_endpoint6.rs:28:29
   |
28 |     Ok(HttpResponseOk(Ret { "Oxide".to_string(), 0x1de }))
   |                       ---   ^^^^^^^ expected identifier
   |                       |
   |                       while parsing this struct

error: expected identifier, found `0x1de`
  --> tests/fail/bad_endpoint6.rs:28:50
   |
28 |     Ok(HttpResponseOk(Ret { "Oxide".to_string(), 0x1de }))
   |                       ---                        ^^^^^ expected identifier
   |                       |
   |                       while parsing this struct

error[E0063]: missing fields `x` and `y` in initializer of `Ret`
  --> tests/fail/bad_endpoint6.rs:28:23
   |
28 |     Ok(HttpResponseOk(Ret { "Oxide".to_string(), 0x1de }))
   |                       ^^^ missing `x` and `y`
